Fix link alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,11 @@ h2 {
 a {
   color: #fff000;
   height: 2rem;
-  margin: 0 1rem 0 0;
+  margin-right: 1rem;
+}
+
+a:last-of-type {
+  margin-right: 0;
 }
 
 a,
